# Kurs_6

./: .env_sample  .gitignore  pyproject.toml  readme.md  requirements.txt
blog/: admin.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_creation_date.py  0003_alter_blog_creation_date.py  0004_alter_blog_creation_date.py
config/: settings.py  urls.py
customers/: models.py  urls.py  views.py
customers/migrations/: 0001_initial.py
customers/templates/customers/: customer_form.html  customer_list.html
mailings/: admin.py  forms.py  models.py  urls.py  views.py
mailings/mailings_service/: __init__.py  cron_functions.py  send_mail.py  send_mail_and_log.py  send_mailing.py
mailings/migrations/: 0001_initial.py  0002_logs_rename_owner_mailing_user_mailing_creation_date_and_more.py  0003_mailing_next_attempt_alter_mailing_interval_and_more.py  0004_message_remove_logs_user_remove_mailing_body_and_more.py
mailings/templates/mailings/: mailing_confirm_delete.html  mailing_detail.html  mailing_list.html
main/: admin.py  urls.py  views.py
templates/: base.html  index.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
users/service_users/: send_emails.py
users/templates/users/: email_verified.html  login.html  profile.html  register.html  user_form.html  verification_failed.html  verification_link_sent.html
