[tool.poetry]
name = "kurs-6"
version = "0.1.0"
description = ""
authors = ["nataliagovorushkina <a10061514@gmail.com>"]
readme = "README.md"
packages = [{include = "kurs_6"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
